--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,7 @@ body{
         align-items: center;
     }
     .menu--container{
+        position: relative;
         width: 100%;
         height: 15vh;
         background-color: rgb(12, 16, 54);
