--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body{
     .menu--container{
         position: relative;
         width: 100%;
-        height: 15vh;
+        height: fit-content;
         background-color: rgb(12, 16, 54);
      
     }
@@ -102,23 +102,21 @@ body{
         border-radius: 5px;
     }
     .item--container > .item{
+        font-size: 15px;
         text-decoration: none;
         padding: 0 27px;
         color: white;
-        font-size: 20px;
+       
         font-family: 'Poppins', sans-serif;
     }
   
     .item--container{
-        z-index: 1;
-        width: fit-content;
-        height: 200px;
-        top: 5%;
-        left: 70%;
-        position: absolute;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
+        align-items:center;
+        z-index: 1;
         background-color: rgb(12, 16, 54);
     }
     .item--container2 > .item{
