--- a/src/curriculum.css
+++ b/src/curriculum.css
@@ -92,7 +92,7 @@
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    width: 65%;
+    width: 75%;
     height: 50px;
     border: 2px solid rgb(19, 19, 43);
     margin-top: 10px;
@@ -110,6 +110,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 
 }
 .cu--subject--btn:hover{
