--- a/src/curriculum.css
+++ b/src/curriculum.css
@@ -92,7 +92,7 @@
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    width: 85%;
+    width: 65%;
     height: 50px;
     border: 2px solid rgb(19, 19, 43);
     margin-top: 10px;
@@ -122,3 +122,18 @@
     color: white;
 }
 
+@media (max-width:700px) {
+    .cu--subject--btn{
+        position: relative;
+        font-family: 'Poppins', sans-serif;
+        font-size: 20px;
+        width: 90%;
+        height: 50px;
+        border: 2px solid rgb(19, 19, 43);
+        margin-top: 10px;
+        text-decoration: none;
+        color: black;
+       
+    }
+    
+}
