--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ body{
         display: flex;
         align-items: center;
         width: 100%;
+        font-size: 20px;
         
     }
     .title--container{
