--- a/src/contact.css
+++ b/src/contact.css
@@ -74,6 +74,11 @@ body{
     background-color: rgb(10, 32, 65);
     width: 200px;
     height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none;
 }
 .line--info{
     margin-bottom: 10px;
@@ -118,7 +123,7 @@ body{
 }
 .fas{
     font-size: 20px;
-    color: green;
+    color: white;
 }
 .info--{
     display: flex;
@@ -153,6 +158,17 @@ body{
     }
     .where--info{
         width: 100%;
+    }
+  
+    
+}
+@media (max-width:400px) {
+    .info--{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        font-size: 12px;
     }
     
 }
