--- a/src/about.css
+++ b/src/about.css
@@ -256,7 +256,38 @@ body{
     .footer--container{
         width: 100%;
     }
+    
+    
  
 
+    
+}
+@media (max-width:400px) {
+    .offered--subjects{
+        width: 100%;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        
+    }
+    .subject1{
+        margin-left: 5px;
+        border: 2px solid rgb(21, 111, 75);
+        font-family: 'Poppins', sans-serif;
+        font-size: 14px;
+        padding: 0 5px;
+    }
+    .founder--container{
+        margin-top: 50px;
+        margin-left: 20px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .founder--ifo{
+        font-size:14px;
+    }
     
 }
