--- a/src/curriculum.css
+++ b/src/curriculum.css
@@ -139,8 +139,17 @@
     
 }
 @media (max-width:400px) {
+    .footer--container{
+        margin-top: 10px;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+       
+    }
     .copy{
-        font-size: 10px;
+        width: 100%;
+        font-size: 13px;
     }
     
 }
