--- a/src/online.css
+++ b/src/online.css
@@ -168,3 +168,30 @@
      
     }
 }
+@media (max-width:400px) {
+    .header--container{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 10vh;
+        background-image: url('./images/background.jpg');
+        background-size: cover;
+    }
+    .input--container{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .search--input{
+        width: 60%;
+        text-indent: 19%;
+    }
+    .button--search{
+        width: 30%;
+     
+    }
+    
+}
