--- a/src/contact.css
+++ b/src/contact.css
@@ -6,6 +6,12 @@
 body{
     position: relative;
 }
+.ab--container{
+    overflow-x: hidden;
+}
+.ac--container{
+    overflow-x: hidden;
+}
 .contact--title--container{
     width: 220px;
     padding: 20px 40px;
