--- a/src/home.css
+++ b/src/home.css
@@ -234,7 +234,12 @@
         width: 100%;
         font-size: 20px;
         text-align: center;
-        color:whitesmoke;
+        color:rgb(218, 218, 218);
+    }
+    .image--text> h4{
+        text-align: center;
+        font-size: 20px;
+        color:rgb(218, 218, 218);
     }
     
 }
