--- a/src/subjects/history.css
+++ b/src/subjects/history.css
@@ -8,6 +8,7 @@
     position: relative;
 }
 .hs--goto{
+   
     width: fit-content;
     padding: 0 5px;
     height: 30px;
@@ -18,9 +19,10 @@
     align-items: center;
     justify-content: center;
     color: white;
-    margin: 0 auto;
+    margin: 10px auto;
 }
 .goto{
+  
     text-decoration: none;
 }
 .hs--goto:hover{
