--- a/src/home.css
+++ b/src/home.css
@@ -23,11 +23,12 @@
     width: 100%;
     font-size: 30px;
     text-align: center;
-    color:whitesmoke;
+    color:rgb(218, 218, 218);;
 }
 .image--text> h4{
     text-align: center;
     font-size: 20px;
+    color:rgb(218, 218, 218);
 }
 .image--text{
     width: 100%;
@@ -227,6 +228,17 @@
         height: 30vh;
         background-image: url(./images/school2.png);
         background-size: cover;
+    }
+    .image--text> h3{
+        width: 100%;
+        font-size: 20px;
+        text-align: center;
+        color:rgb(218, 218, 218);
+    }
+    .image--text> h4{
+        text-align: center;
+        font-size: 20px;
+        color:rgb(218, 218, 218);
     }
 }
 @media (max-width:400px) {
