--- a/src/online.css
+++ b/src/online.css
@@ -171,11 +171,11 @@
 @media (max-width:400px) {
     .header--container{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         flex-direction: column;
         align-items: center;
         width: 100%;
-        height: 10vh;
+        height: 15vh;
         background-image: url('./images/background.jpg');
         background-size: cover;
     }
