--- a/src/online.css
+++ b/src/online.css
@@ -176,7 +176,7 @@
         align-items: center;
         width: 100%;
         height: 15vh;
-        background-image: url('./images/background.jpg');
+        background-color: rgb(39, 40, 45);
         background-size: cover;
     }
     .input--container{
@@ -184,6 +184,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        margin-bottom: 5px;
     }
     .search--input{
         width: 60%;
