--- a/src/subjects/history.css
+++ b/src/subjects/history.css
@@ -19,7 +19,7 @@
     align-items: center;
     justify-content: center;
     color: white;
-    margin: 10px auto;
+    margin: 17px auto;
     font-family: 'Poppins', sans-serif;
 }
 .goto{
@@ -146,4 +146,23 @@
     background-color: rgb(16, 16, 45);
     border-radius: 5px;
 
+}
+@media (max-width:400px) {
+    .hs--goto{
+   
+        width: fit-content;
+        padding: 0 5px;
+        height: 30px;
+        border-radius: 10px;
+        text-decoration: none;
+        border: 1px solid white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 13px;
+        margin: 17px auto;
+        font-family: 'Poppins', sans-serif;
+    }
+    
 }
