--- a/src/home.css
+++ b/src/home.css
@@ -63,7 +63,7 @@
 .text--container{
     width: 100%;
     height: 30vh;
-    background-color:var(--main-color) ;
+    background-color:white ;
     border-top: 1px solid white;
     display: flex;
     align-items: center;
@@ -72,7 +72,7 @@
 .card{
     width: 100%;
     height: 30vh;
-    background-color:var(--main-color) ;
+    background-color:white ;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -83,21 +83,21 @@
     width: 200px;
     height: 28vh;
     border-radius: 5px;
-    background-color: #0e2642;
+    background-color: #c3c4c6;
 }
 .subjects--container{
     position: relative;
     width: 200px;
     height: 28vh;
     border-radius: 5px;
-    background-color: #554d1b;
+    background-color: #c3c4c6;
 }
 .online--container{
     position: relative;
     width: 200px;
     height: 28vh;
     border-radius: 5px;
-    background-color: #4a122f;
+    background-color: #c3c4c6;
 }
 .title--containers, .button--container{
     color: white;
@@ -128,19 +128,19 @@
     text-decoration: none;
     margin-top: 5px;
     font-size: 13px;
-    color: rgb(142, 142, 142);
+    color: rgb(15, 16, 18);
     border-radius: 5px;
 }
 .link:hover{
     cursor: pointer;
-    color:yellow;
-    background-color: #14283f;
+    color:rgb(61, 11, 62);
+  
     border: none;
     padding: 0 5px;
 }
 .title--containers > p {
     font-size: 12px;
-    color: rgb(223, 223, 223);
+    color: rgb(12, 10, 10);
 
 }
 .button--see{
@@ -166,6 +166,7 @@
 .school--container{
     width: 175px;
     height: 30vh;
+    border-radius: 20px;
     background-image: url(./images/school2.png);
     background-size: cover;
 }
@@ -200,7 +201,7 @@
     .card{
         width: 100%;
         height: 600px;
-        background-color:var(--main-color) ;
+        background-color:white;
         display: flex;
         flex-direction: column;
         align-items: center;
