--- a/src/online.css
+++ b/src/online.css
@@ -148,6 +148,17 @@
     transform: scale(1.2);
 }
 @media (max-width:700px) {
+    .header--container{
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 15vh;
+        background-color: rgb(39, 40, 45);
+        background-image: none;
+    
+    }
     .input--container{
         width: 65%;
         display: flex;
@@ -158,13 +169,22 @@
     
     .header--title{
         font-size: 15px;
+        padding-left: 0;
+    }
+ 
+    .input--container{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 5px;
     }
     .search--input{
-        width: 70%;
-        text-indent: 17%;
+        width: 60%;
+        text-indent: 19%;
     }
     .button--search{
-        width: 25%;
+        width: 30%;
      
     }
 }
@@ -177,7 +197,8 @@
         width: 100%;
         height: 15vh;
         background-color: rgb(39, 40, 45);
-        background-size: cover;
+        background-image: none;
+    
     }
     .input--container{
         width: 100%;
