--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -138,18 +138,27 @@
 }
 
 .l-email-sent-container{
+    top: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+   
+}
+.l-email-sent-main-container{
     z-index: 2;
     padding: 2em 2em;
-    position: absolute;
     width: 80%;
     max-width: 600px;
-    background-color: white;
+    background-color: #ebebeb;
     display: flex;
     flex-direction: column;
     gap: 1em;
     align-items: center;
 }
-
 .btn-resend-email{
     max-width: 200px;
     background-color: green;
