--- a/src/Pages/Quiz/quiz.css
+++ b/src/Pages/Quiz/quiz.css
@@ -100,6 +100,9 @@ main{
     background-color: rgb(209, 212, 214);
     overflow-y: auto;
     padding: 2em 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
     
    
 }
