--- a/src/Pages/Subjects/online.css
+++ b/src/Pages/Subjects/online.css
@@ -96,6 +96,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    gap: 1em;
 
 }
 .l-lesson{
@@ -109,6 +110,7 @@
     background-color: rgb(252, 252, 252);
     text-decoration: none;
     cursor: pointer;
+    padding-bottom: 1em;
     
 }
 .background-overlay{
@@ -117,14 +119,19 @@
 
 
 .lesson--title{
+    max-width: 95%;
+    text-align: center;
     font-size: 15px;
     color: black !important;
     font-family: 'Poppins' , sans-serif;
 }
 
 .lesson--description{
+    max-width: 95%;
+    text-align: center;
     font-size: 13px;
     color: rgb(46, 49, 52);
+
 }
 .context--container{
     z-index: 2;
@@ -225,6 +232,7 @@
     transition: ease 0.5s;
 }
 
+
 @media (max-width:800px) {
     .header--container{
         height: fit-content;
@@ -260,7 +268,7 @@
 
     .l-lesson{
         width: 200px !important;
-        height: 200px !important;
+        height: 250px !important;
     }
    
 }
